# bazel-cpp

./: .bazelrc  MODULE.bazel
example2/: hello_test.cc
